SF-Custom-Objects/salesforce_ant_46.0/sample/codepkg/objects/OCEAN_ADO_Projects__c.object
<CustomObject>
    <fields>
        <fullName>ADO_ID__c</fullName>
        <label>ADO ID</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADO_Name__c</fullName>
        <label>ADO Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Id__c</fullName>
        <label>Application Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROJECT_NAME__c</fullName>
        <label>PROJECT NAME</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OCEAN_ADO_Project</label>
    <nameField>
        <label>OCEAN_ADO_Projects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCEAN_ADO_Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>